[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dynapyt"
authors = [{name = "Aryaz Eghbali", email = "aryaz.egh@gmail.com"}, {name = "Michael Pradel", email = "michael@binaervarianz.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/sola-st/dynapyt"
